--- a/Microservices.Demo.Client.Web.ApiGateway/application.yml
+++ b/Microservices.Demo.Client.Web.ApiGateway/application.yml
@@ -114,21 +114,21 @@ Routes:
             userType: SALESMAN      
         DangerousAcceptAnyServerCertificateValidator: true
 
-        #VM-Link-Inicio
-        DownstreamPathTemplate: /api/Policies/GetAll
-        DownstreamScheme: http
-        UpstreamPathTemplate: /api/Policies/GetAll
-        ServiceName: Microservices.Demo.Policy.API
-        UpstreamHttpMethod: 
-            - Post
-        AuthenticationOptions:
-            AuthenticationProviderKey: ApiSecurityAuthenticationScheme
-#            AllowedScopes:
-#                -
-        RouteClaimsRequirement:
-            userType: SALESMAN
-        DangerousAcceptAnyServerCertificateValidator: true
-        #VM-Link-Fin
+#         #VM-Link-Inicio
+#         DownstreamPathTemplate: /api/Policies/GetAll
+#         DownstreamScheme: http
+#         UpstreamPathTemplate: /api/Policies/GetAll
+#         ServiceName: Microservices.Demo.Policy.API
+#         UpstreamHttpMethod: 
+#             - Post
+#         AuthenticationOptions:
+#             AuthenticationProviderKey: ApiSecurityAuthenticationScheme
+# #            AllowedScopes:
+# #                -
+#         RouteClaimsRequirement:
+#             userType: SALESMAN
+#         DangerousAcceptAnyServerCertificateValidator: true
+#         #VM-Link-Fin
     -
         DownstreamPathTemplate: /api/PoliciesSearch
         DownstreamScheme: http
