--- a/Microservices.Demo.Client.Web.ApiGateway/application.yml
+++ b/Microservices.Demo.Client.Web.ApiGateway/application.yml
@@ -65,7 +65,7 @@ Routes:
  #           AllowedScopes:
  #               -      
         RouteClaimsRequirement:
-            userType: SALESMAN      
+            userType: SALESMAN
         DangerousAcceptAnyServerCertificateValidator: true
     -
         DownstreamPathTemplate: /api/Offers
@@ -98,9 +98,9 @@ Routes:
             userType: SALESMAN
         DangerousAcceptAnyServerCertificateValidator: true
     -
-        DownstreamPathTemplate: /api/Policies/{number}
+        DownstreamPathTemplate: /api/Policies/{policyNumber}
         DownstreamScheme: http
-        UpstreamPathTemplate: /api/Policies/{number}
+        UpstreamPathTemplate: /api/Policies/{policyNumber}
         ServiceName: Microservices.Demo.Policy.API
         UpstreamHttpMethod: 
             - Get
@@ -114,21 +114,23 @@ Routes:
             userType: SALESMAN      
         DangerousAcceptAnyServerCertificateValidator: true
 
-#         #VM-Link-Inicio
-#         DownstreamPathTemplate: /api/Policies/GetAll
-#         DownstreamScheme: http
-#         UpstreamPathTemplate: /api/Policies/GetAll
-#         ServiceName: Microservices.Demo.Policy.API
-#         UpstreamHttpMethod: 
-#             - Post
-#         AuthenticationOptions:
-#             AuthenticationProviderKey: ApiSecurityAuthenticationScheme
-# #            AllowedScopes:
-# #                -
-#         RouteClaimsRequirement:
-#             userType: SALESMAN
-#         DangerousAcceptAnyServerCertificateValidator: true
-#         #VM-Link-Fin
+        #VM-Link-Inicio
+        DownstreamPathTemplate: /api/Policies
+        DownstreamScheme: http
+        UpstreamPathTemplate: /api/Policies
+        ServiceName: Microservices.Demo.Product.API
+        UpstreamHttpMethod:
+            - Get
+        FileCacheOptions: 
+            TtlSeconds: 15
+        AuthenticationOptions:
+            AuthenticationProviderKey: ApiSecurityAuthenticationScheme
+ #           AllowedScopes:
+ #               -      
+        RouteClaimsRequirement:
+            userType: SALESMAN
+        DangerousAcceptAnyServerCertificateValidator: true
+        #VM-Link-Fin
     -
         DownstreamPathTemplate: /api/PoliciesSearch
         DownstreamScheme: http
