--- a/Microservices.Demo.Report.API/application.yml
+++ b/Microservices.Demo.Report.API/application.yml
@@ -1,9 +1,9 @@
-# AuthSettings:
-#     Secret: THIS_IS_A_RANDOM_SECRET_2e7a1e80-16ee-4e52-b5c6-5e8892453459
-#     AllowedAuthOrigins:
-#         - https://localhost:44300
-# ElasticApm:
-#     SecretToken: 
-#     ServerUrls: http://microservices.demo.apm-server:8200
-#     ServiceName: Microservices.Demo.Report.API
-#     Environment: production
+AuthSettings:
+    Secret: THIS_IS_A_RANDOM_SECRET_2e7a1e80-16ee-4e52-b5c6-5e8892453459
+    AllowedAuthOrigins:
+        - https://localhost:44300
+ElasticApm:
+    SecretToken: 
+    ServerUrls: http://microservices.demo.apm-server:8200
+    ServiceName: Microservices.Demo.Report.API
+    Environment: production
